--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <button id="ask">Make a new Grid</button>
+    <h1>Etch-a-Sketch</h1>
+    <button>Choose No.of Squares</button>
     <div id="container"></div>
     <script src="script.js"></script>
 </body>
